[gd_scene load_steps=13 format=3 uid="uid://be3xnhmmb0v3j"]

[ext_resource type="Script" uid="uid://c5ja1fnfgrodr" path="res://scripts/xr_rig.gd" id="1_4hrip"]
[ext_resource type="PackedScene" uid="uid://8jsauvbqvkou" path="res://addons/xr-autohandtracker/simplelefthand.glb" id="2_dd1ma"]
[ext_resource type="Material" uid="uid://byabtrj56ihu" path="res://assets/materials/hand_shader.tres" id="2_j2fxx"]
[ext_resource type="PackedScene" uid="uid://bufelcry36rw1" path="res://addons/xr-autohandtracker/auto_handtracker.tscn" id="4_4hrip"]
[ext_resource type="PackedScene" uid="uid://dngec4nbh3ngj" path="res://addons/xr-autohandtracker/simplerighthand.glb" id="4_dd1ma"]
[ext_resource type="Script" uid="uid://d3u7st03gfs8h" path="res://scripts/hand_interaction_manager.gd" id="6_xllm5"]
[ext_resource type="Script" uid="uid://0if0m2ftvto7" path="res://scripts/gaze_selection.gd" id="7_tydbt"]
[ext_resource type="Script" uid="uid://bftg045hnrand" path="res://scripts/interaction_zone_manager.gd" id="9_dd1ma"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hg5dl"]
radius = 0.005

[sub_resource type="SphereMesh" id="SphereMesh_hg5dl"]
radius = 0.005
height = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_dd1ma"]
radius = 0.005

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dd1ma"]
transparency = 1
depth_draw_mode = 1
albedo_color = Color(0.956863, 0.180392, 0.529412, 0.262745)

[node name="XROrigin3D" type="XROrigin3D"]
script = ExtResource("1_4hrip")

[node name="XRCamera3D" type="XRCamera3D" parent="."]

[node name="LeftXRNode3D" type="XRController3D" parent="."]
tracker = &"left_hand"
show_when_tracked = true

[node name="simplelefthand" parent="LeftXRNode3D" instance=ExtResource("2_dd1ma")]

[node name="LeftHandHumanoidMesh" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("2_j2fxx")

[node name="AttachmentPoint" type="BoneAttachment3D" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D" index="1"]
transform = Transform3D(1.78814e-07, -1.86264e-05, 1, -0.999999, 0.0016675, 2.68221e-07, -0.00166756, -0.999999, -1.85966e-05, 3.86425e-08, -1.86975e-05, 0.0271756)
bone_name = "LeftHand"
bone_idx = 0

[node name="PointerFingerTip" type="BoneAttachment3D" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D" index="2"]
transform = Transform3D(0.0148921, 0.3927, 0.919546, -0.993092, 0.112853, -0.0321114, -0.116383, -0.912716, 0.391668, -0.0111002, 0.042943, -0.171614)
bone_name = "LeftIndexTip"
bone_idx = 9

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D/PointerFingerTip"]
collision_layer = 2
collision_mask = 0
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D/PointerFingerTip/AnimatableBody3D"]
shape = SubResource("SphereShape3D_hg5dl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftXRNode3D/simplelefthand/LeftHandHumanoid/Skeleton3D/PointerFingerTip/AnimatableBody3D"]
transform = Transform3D(1, -1.49012e-08, -7.45058e-09, 7.45058e-09, 1, 0, 7.45058e-09, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_hg5dl")
skeleton = NodePath("../..")

[node name="AutoHandtracker" parent="LeftXRNode3D" instance=ExtResource("4_4hrip")]
visiblehandtrackskeleton = false
enableautotracker = false

[node name="RightXRNode3D" type="XRController3D" parent="."]
tracker = &"right_hand"
show_when_tracked = true

[node name="simplerighthand" parent="RightXRNode3D" instance=ExtResource("4_dd1ma")]

[node name="RightHandHumanoidMesh" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("2_j2fxx")

[node name="AttachmentPoint" type="BoneAttachment3D" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D" index="1"]
transform = Transform3D(1.78814e-07, 1.86264e-05, -1, 0.999999, 0.0016675, 2.68221e-07, 0.00166756, -0.999999, -1.85966e-05, -3.86425e-08, -1.86975e-05, 0.0271756)
bone_name = "RightHand"
bone_idx = 0

[node name="PointerFingerTip" type="BoneAttachment3D" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D" index="2"]
transform = Transform3D(0.019038, -0.392689, -0.919475, 0.993227, 0.112853, -0.027632, 0.114616, -0.912721, 0.392177, 0.0111001, 0.042943, -0.171613)
bone_name = "RightIndexTip"
bone_idx = 9

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D/PointerFingerTip"]
collision_layer = 2
collision_mask = 0
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D/PointerFingerTip/AnimatableBody3D"]
shape = SubResource("SphereShape3D_dd1ma")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightXRNode3D/simplerighthand/RightHandHumanoid/Skeleton3D/PointerFingerTip/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, -7.45058e-09, -2.98023e-08, 1, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_hg5dl")
skeleton = NodePath("../..")

[node name="AutoHandtracker" parent="RightXRNode3D" instance=ExtResource("4_4hrip")]
visiblehandtrackskeleton = false
enableautotracker = false

[node name="HandInteractionManager" type="Node3D" parent="." node_paths=PackedStringArray("left_controller", "right_controller")]
script = ExtResource("6_xllm5")
left_controller = NodePath("../LeftXRNode3D")
right_controller = NodePath("../RightXRNode3D")
metadata/_custom_type_script = "uid://d3u7st03gfs8h"

[node name="GazeSelection" type="Node3D" parent="." node_paths=PackedStringArray("xr_camera")]
script = ExtResource("7_tydbt")
xr_camera = NodePath("../XRCamera3D")
metadata/_custom_type_script = "uid://0if0m2ftvto7"

[node name="InteractionZoneManager" type="Node3D" parent="." node_paths=PackedStringArray("xr_camera", "hand_interaction_manager")]
script = ExtResource("9_dd1ma")
xr_camera = NodePath("../XRCamera3D")
hand_interaction_manager = NodePath("../HandInteractionManager")
zone_material = SubResource("StandardMaterial3D_dd1ma")
metadata/_custom_type_script = "uid://bftg045hnrand"

[editable path="LeftXRNode3D/simplelefthand"]
[editable path="RightXRNode3D/simplerighthand"]
